# HarmonyVPKTool

./: .gitignore  README.md  index.html  main.css  main.js  package-lock.json  package.json  preload.js  renderer.js
.github/workflows/: ci.yml  purge_artifacts.yml
script/: removeEventListeners.js
src/: App.vue  main.ts  styles.css  types.ts  util.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: DragAndDrop.vue  Error.vue  FileTree.vue  Loading.vue  Settings.vue  TreeFolder.vue
src/stores/: main.ts
tfvpktool/: buffer.js  buffer.js.map  cam.js  cam.js.map  crc.js  crc.js.map  index.js  index.js.map  reader.js  reader.js.map  vpk.js  vpk.js.map  worker.js  worker.js.map
