[package]
name = "harmony-vpk-tool"
version = "0.0.0"
description = "Harmony VPK Tool"
authors = ["barnabwhy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "os-all", "dialog-open", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sourcepak = { version = "0.1.1", features = ["respawn"] }
urlencoding = "2.1.3"
rayon = "1.8.1"

[profile.release]
strip = true

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
