[package]
name = "harmony-vpk-tool"
version = "0.0.0"
description = "Harmony VPK Tool"
authors = ["barnabwhy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sourcepak = { version = "0.1.1", features = ["respawn"] }
urlencoding = "2.1.3"
rayon = "1.8.1"
tauri-plugin-dialog = "2.0.0-beta.1"
tauri-plugin-shell = "2.0.0-beta.1"
tauri-plugin-os = "2.0.0-beta.1"

[profile.release]
strip = true

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
